<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.senzecit.iitiimshaadi.activity.FAQActivity">

    <include layout="@layout/app_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin_small">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/faq_bg_shape"
            android:padding="@dimen/activity_horizontal_margin_small">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_header"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques1"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans1"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques2"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans2"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques3"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans3a"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans3b"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans3c"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques4"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans4"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques5"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans5"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques6"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans6"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques7"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans7"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques8"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans8"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques9"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans9"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques10"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans10"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques_india"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_in_a"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_in_b"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_in_c"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_in_d"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques_inter"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_int_a"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_int_b"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_int_c"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans_int_d"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
##Ques11
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques11"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans11"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques12
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques12"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans12"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques13
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques13"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans13"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques14
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques14"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans14"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques15
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques15"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans15"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques16
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques16"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans16"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques17
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques17"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans17"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques18
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques18"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans18"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            ##Ques19
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ques19"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans19a"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans19b"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_ans19c"
                android:textSize="14sp"
                android:textColor="@color/colorGrey"/>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
